[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipecho-client"
version = "1.0.0"
description = "Minimal SOCKS5 proxy IP detection - 27 bytes total"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
ipecho-client = "ipecho_client:_cli"

[project.urls]
Homepage = "https://github.com/sarperavci/ipecho"

[tool.setuptools.packages.find]
include = ["ipecho_client*"]